tests/test_files_pa3/new/SemanticErrors/UnaryOpsBad4.ic
class B
{

	void booleans(boolean x)
	{
		int z;
		
		z = !x;

	}
}